--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,10 @@
-image: registry.gitlab.com/kitsune_other/kitsune_docker_unittest:0.1.0
+image: registry.gitlab.com/kitsune_other/kitsune_docker_unittest:0.1.2
 
 build:
   script:
     - echo Working on branch $CI_COMMIT_REF_NAME
 
+    - apt-get update
     - apt-get install -y libboost-filesystem-dev libsqlite3-dev
 
     - cd /builds/tobiasanker/libKitsunemimiPersistence
