--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,35 @@
-image: registry.gitlab.com/kitsune_other/kitsune_docker_unittest:0.1.2
+image: registry.gitlab.com/kitsudaiki/kitsunemimi-ci-docker-images/normal-tests:1.0.0
+
+stages:
+  - build
+  - test
 
 build:
+  stage: build
   script:
     - echo Working on branch $CI_COMMIT_REF_NAME
-
+    - pwd
     - apt-get update
     - apt-get install -y libboost-filesystem-dev libsqlite3-dev
-
-    - cd /builds/tobiasanker/libKitsunemimiPersistence
     - ./build.sh test
+    - mkdir upload
+    - cp -r ../result/* upload/
+    - cp ../build/libKitsunemimiPersistence/tests/unit_tests/unit_tests upload/
+  artifacts:
+    paths:
+      - upload
+    expire_in: 1 week
+  tags:
+    - docker
 
-    - /builds/tobiasanker/build/libKitsunemimiPersistence/tests/unit_tests/unit_tests
-
+unit_tests:
+  stage: test
+  script:
+    - ls -l
+    - apt-get update
+    - apt-get install -y libboost-filesystem-dev libsqlite3-dev
+    - upload/unit_tests
+  dependencies:
+    - build
   tags:
     - docker
